fix: z-indexes of top menu, dropdown and subnavs (#928)
* fixed z-indexes of top menu, dropdown and subnavs

* fix: subnav

* fix: removed brackets

* fix: added space

--- a/portal/static/portal/sass/modules/_levels.scss
+++ b/portal/static/portal/sass/modules/_levels.scss
@@ -1,2 +1,2 @@
 $hover-content-level: 100;
-$nav-bar-level: 200;
+$nav-bar-level: 201;
